--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@
 #destroy{
     display: none;
 }
+
 #search{
     border-top-right-radius: 12px;
     border-bottom-right-radius: 12px;
@@ -13,6 +14,7 @@
     width: 50%;
     height: 50px;
 }
+
 .searchform{
     justify-content: space-between;
     box-shadow: 0px 1px 11px 1px rgb(189, 189, 189);
@@ -23,5 +25,18 @@
 }
 
 .titre{
-    padding: 3%;
+    color: red;
+}
+
+body{
+    justify-content: space-evenly;
+    position: relative;
+}
+
+.mil{
+    padding: 10%;
+}
+
+.mil input{
+    margin: 10px;
 }
