--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,17 @@
+*{
+    font-size: 20px;
+    transition: .5s;
+    --main-color: #ff5a61;
+}
+
+@keyframes blA {
+    0%{transform: translateX(-100%);opacity: 0;}
+    100%{transform: translateX(0);opacity: 1;}
+}
+
 .navbar{
     justify-content: space-evenly;
-    border-bottom: 2px solid red;
+    border-bottom: 1px solid gray;
     padding: 1%;
 }
 #destroy{
@@ -8,9 +19,9 @@
 }
 
 #search{
-    border-top-right-radius: 12px;
-    border-bottom-right-radius: 12px;
-    border: none;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border: 2px solid var(--main-color);
     width: 50%;
     height: 50px;
 }
@@ -20,12 +31,25 @@
     box-shadow: 0px 1px 11px 1px rgb(189, 189, 189);
     width: 30%;
     height: 50px;
-    border-radius: 12px;
+    border-radius: 50px;
     display: flex;
+    color: black;
+}
+
+.searchform:hover{
+    background-color:var(--main-color);
+    box-shadow: 0px 1px 11px 1px rgb(153, 153, 153);
 }
 
 .titre{
-    color: red;
+    color: var(--main-color);
+    width: 50%;
+    text-align: center;
+    padding: 2%;
+}
+
+.searchform:hover .titre{
+    color: white;
 }
 
 body{
@@ -34,9 +58,36 @@ body{
 }
 
 .mil{
+    margin-top: 9%;
     padding: 10%;
+    width: 70%;
+    animation-name: blA;
+    animation-duration: 2s;
 }
 
 .mil input{
     margin: 10px;
 }
+
+.input_text input{
+    border-radius: 50px;
+    border: 1px solid var(--main-color);
+    padding-left: 10px;
+}
+
+#continue{
+    width: 58%;
+    background-color: var(--main-color);
+    border: 1px solid var(--main-color);
+    border-radius: 50px;
+    color: white;
+}
+#continue:hover{
+    background-color: white;
+    color: var(--main-color);
+}
+
+.mot{
+    color: var(--main-color);
+}
+
